# simple-toml-parser

./: .clang-format  CMakeLists.txt  README.md  input.toml
src/: OutputStrategyInterface.hpp  OutputString.cpp  OutputString.hpp  TomlComponentArray.cpp  TomlComponentArray.hpp  TomlComponentBool.cpp  TomlComponentBool.hpp  TomlComponentCollectionInterface.hpp  TomlComponentFloat.cpp  TomlComponentFloat.hpp  TomlComponentInt.cpp  TomlComponentInt.hpp  TomlComponentInterface.hpp  TomlComponentSingularInterface.hpp  TomlComponentString.cpp  TomlComponentString.hpp  TomlComponentTable.cpp  TomlComponentTable.hpp  TomlComponentTemplate.hpp  TomlParser.cpp  TomlParser.hpp  main.cpp
